--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
+  <head>
+    <title>MISACukCuk - Phần mềm quản lý nhà hàng</title>
+  </head>
+  <body>
+    <textarea name="" id="" cols="30" rows="10">
+      
+    </textarea>
+  </body>
 </html>
